[package]
name = "solana-mev-bot"
version = "1.0.0"
edition = "2021"
description = "Simple Solana MEV bot"
license = "MIT"

[dependencies]
# Core Solana dependencies
solana-sdk = "~2.1.1"
solana-client = "~2.1.1"
solana-program = "~2.1.1"
solana-account-decoder = "~2.1.1"
solana-transaction-status = "~2.1.1"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"
bs58 = "0.5.1"
borsh = "0.10.3"
bytemuck = { version = "1.16.1", features = ["derive"] }

# Command line argument parsing
clap = "3.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Meteora pools
meteora-damm-cpi = { path = "lib/meteora-damm", features = ["no-entrypoint"] }
meteora-vault-cpi = { path = "lib/meteora-vault", features = ["no-entrypoint"] }

# Jito
jito-json-rpc-client = { git = "https://github.com/jojo2918/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client" }



